skeleton files of new website design

--- a/webpage/example-notebooks/molmer-sorensen.ipynb
+++ b/webpage/example-notebooks/molmer-sorensen.ipynb
@@ -12,81 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: set_sublevel_alias! not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: set_sublevel_alias! not defined\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ ~/Documents/research/haffner/ionsim/examples/webpage/tutorial-notebooks/Untitled.ipynb:3"
-     ]
-    }
-   ],
-   "source": [
-    "# # Construct the system\n",
-    "# C = Ca40([(\"S1/2\", -1/2), (\"D5/2\", -1/2)])\n",
-    "# set_sublevel_alias!(C, Dict(\"S\" => (\"S1/2\", -1/2),\n",
-    "#                             \"D\" => (\"D5/2\", -1/2)))\n",
-    "# L1 = Laser(ϕ=π); L2 = Laser()  # note the π-phase between L1/L2\n",
-    "# chain = LinearChain(ions=[C, C], com_frequencies=(x=3e6, y=3e6, z=2.5e5),\n",
-    "#         vibrational_modes=(;z=[1]))\n",
-    "# T = Trap(configuration=chain, B=6e-4, Bhat=(x̂ + ẑ)/√2,\n",
-    "#         lasers=[L1, L2])\n",
-    "# mode = T.configuration.vibrational_modes.z[1]\n",
-    "\n",
-    "# # Set the laser parameters\n",
-    "# ϵ = 10e3\n",
-    "# d = 350  # correct for single-photon coupling to sidebands\n",
-    "# L1.λ = transitionwavelength(C, (\"S\", \"D\"), T)\n",
-    "# L2.λ = transitionwavelength(C, (\"S\", \"D\"), T)\n",
-    "# L1.Δ = mode.ν + ϵ - d\n",
-    "# L2.Δ = -mode.ν - ϵ + d\n",
-    "# L1.k = L2.k = ẑ\n",
-    "# L1.ϵ = L2.ϵ = x̂\n",
-    "# # set 'resonance' condition: ηΩ = 1/2ϵ\n",
-    "# η = abs(get_η(mode, L1, C))\n",
-    "# E = Efield_from_pi_time!(η/ϵ, T, 1, 1, (\"S\", \"D\"))(0)\n",
-    "# Ω = t -> t < 20 ? E * sin(2π * t / 80)^2 : E  # ampl. ramp\n",
-    "# L1.E = L2.E = Ω\n",
-    "\n",
-    "# # Build Hamiltonian\n",
-    "# h = hamiltonian(T, lamb_dicke_order=1, rwa_cutoff=Inf)\n",
-    "\n",
-    "# # Solve\n",
-    "# tspan = 0:.1:220\n",
-    "# t, sol = timeevolution.schroedinger_dynamic(tspan, C[\"S\"] ⊗ C[\"S\"] ⊗ mode[0], h);"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "⁴⁰Ca\n"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Construct the system\n",
-    "C = Ca40([(\"S1/2\", -1/2, \"S\"), (\"D5/2\", -1/2, \"D\")])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "id": "9358cd44",
    "metadata": {},
    "outputs": [
     {
@@ -96,79 +23,7 @@
       "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mSome ions point to the same thing. Making copies.\n",
       "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ IonSim ~/.julia/packages/IonSim/UekVf/src/iontraps.jl:166\u001b[39m\n"
      ]
-    }
-   ],
-   "source": [
-    "L1 = Laser(ϕ=π); L2 = Laser()  # note the π-phase between L1/L2\n",
-    "chain = LinearChain(ions=[C, C],\n",
-    "                    comfrequencies=(x=3e6, y=3e6, z=2.5e5),\n",
-    "                    selectedmodes=(;z=[1]))\n",
-    "chamber = Chamber(  B=6e-4,\n",
-    "                    Bhat=(x̂ + ẑ)/√2,\n",
-    "                    iontrap=chain,\n",
-    "                    lasers=[L1, L2]);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "#1 (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Set the laser parameters\n",
-    "ϵ = 10e3\n",
-    "d = 350  \n",
-    "# correct for single-photon coupling to sidebands\n",
-    "wavelength_from_transition!(L1, C, (\"S\", \"D\"), chamber)\n",
-    "wavelength_from_transition!(L2, C, (\"S\", \"D\"), chamber)\n",
-    "detuning!(L1, modes(chamber)[1].ν + ϵ - d) \n",
-    "detuning!(L2, -modes(chamber)[1].ν - ϵ + d)\n",
-    "L1.k = L2.k = ẑ # old\n",
-    "L1.ϵ = L2.ϵ = x̂ # old\n",
-    "\n",
-    "# set 'resonance' condition: ηΩ = 1/2ϵ\n",
-    "η = abs(lambdicke(modes(chamber)[1], C, L1)) # old\n",
-    "E = intensity_from_pitime!(1, η/ϵ, 1, (\"S\", \"D\"), chamber)\n",
-    "Ω = t -> t < 20 ? E * sin(2π * t / 80)^2 : E  # ampl. ramp # old\n",
-    "L1.I = L2.I = Ω"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "⁴⁰Ca\n"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ions(chamber)[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
@@ -755,12 +610,40 @@
        "     1.94898328093e-6 - 2.08834488746e-6im])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Construct the system\n",
+    "C = Ca40([(\"S1/2\", -1/2, \"S\"), (\"D5/2\", -1/2, \"D\")])\n",
+    "L1 = Laser(ϕ=π); L2 = Laser()  # note the π-phase between L1/L2\n",
+    "chain = LinearChain(ions=[C, C],\n",
+    "                    comfrequencies=(x=3e6, y=3e6, z=2.5e5),\n",
+    "                    selectedmodes=(;z=[1]))\n",
+    "chamber = Chamber(  B=6e-4,\n",
+    "                    Bhat=(x̂ + ẑ)/√2,\n",
+    "                    iontrap=chain,\n",
+    "                    lasers=[L1, L2]);\n",
+    "\n",
+    "# Set the laser parameters\n",
+    "ϵ = 10e3\n",
+    "d = 350  \n",
+    "# correct for single-photon coupling to sidebands\n",
+    "wavelength_from_transition!(L1, C, (\"S\", \"D\"), chamber)\n",
+    "wavelength_from_transition!(L2, C, (\"S\", \"D\"), chamber)\n",
+    "detuning!(L1, modes(chamber)[1].ν + ϵ - d) \n",
+    "detuning!(L2, -modes(chamber)[1].ν - ϵ + d)\n",
+    "L1.k = L2.k = ẑ # old\n",
+    "L1.ϵ = L2.ϵ = x̂ # old\n",
+    "\n",
+    "# set 'resonance' condition: ηΩ = 1/2ϵ\n",
+    "η = abs(lambdicke(modes(chamber)[1], C, L1)) # old\n",
+    "E = intensity_from_pitime!(1, η/ϵ, 1, (\"S\", \"D\"), chamber)\n",
+    "Ω = t -> t < 20 ? E * sin(2π * t / 80)^2 : E  # ampl. ramp # old\n",
+    "L1.I = L2.I = Ω\n",
+    "\n",
     "# Build Hamiltonian\n",
     "h = hamiltonian(chamber, timescale=1e-6)\n",
     "\n",
@@ -773,6 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "a6a9ed19",
    "metadata": {},
    "outputs": [
     {
@@ -795,6 +679,7 @@
     }
    ],
    "source": [
+    "# Plotting\n",
     "import PyPlot\n",
     "const plt = PyPlot\n",
     "\n",
