--- a/webpage/tutorial-notebooks/Installation.ipynb
+++ b/webpage/tutorial-notebooks/Installation.ipynb
@@ -80,15 +80,103 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Extra Linux notes\n",
+    "* Extract the downloaded file\n",
+    "* copy to `/opt` with:\n",
+    "\n",
+    "```bash\n",
+    "$ sudo cp -r julia-1.3.1 /opt/\n",
+    "```\n",
+    "(replacing `julia-1.3.1` with the appropriate version)\n",
+    "* then create a symbolic link in `/usr/local/bin` with\n",
+    "```bash\n",
+    "$ sudo ln -s /opt/julia-1.3.1/bin/julia /usr/local/bin/julia"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!-- ## How to use\n",
+    "\n",
+    "1. Install Julia ([instructions here](https://julialang.org/downloads/)).\n",
+    "2. Open up a Terminal session and fire up the [Julia REPL](https://docs.julialang.org/en/v1/stdlib/REPL/#The-Julia-REPL-1) with\n",
+    "```bash\n",
+    "$ julia\n",
+    "```\n",
+    "(*If using Windows it's easier to start a REPL with the julia executable available after installation.*)\n",
+    "\n",
+    "3. Now run\n",
+    "```julia\n",
+    "julia> using Pkg\n",
+    "julia> Pkg.add(\"IonSim\")\n",
+    "julia> Pkg.add(\"IJulia\")\n",
+    "```\n",
+    "The last line adds Jupyter compatibility, so you'll have the option to start a Julia kernel from Jupyter notebook.\n",
+    "\n",
+    "### Updating IonSim\n",
+    "\n",
+    "IonSim.jl is a work in progress. You can update your local code to the most recent version\n",
+    "with the following:\n",
+    "\n",
+    "```julia\n",
+    "julia> using Pkg\n",
+    "julia> Pkg.update(\"IonSim\")\n",
+    "``` -->"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Development\n",
+    "\n",
+    "If you want to run IonSim locally:\n",
+    "* Open up the Julia REPL\n",
+    "```bash\n",
+    "$ julia\n",
+    "```\n",
+    "* Open the package manager by pressing `]`\n",
+    "* Run the following:\n",
+    "```julia\n",
+    "pkg> dev IonSim\n",
+    "```\n",
+    "This will clone a version of this repo in `~/.julia/dev/IonSim/`. Then when you make changes to that repo, it will be immediately reflected when using Julia.\n",
+    "\n",
+    "You can run tests with\n",
+    "```julia\n",
+    "pkg> test IonSim\n",
+    "```\n",
+    "\n",
+    "Don't forget to format the code! `./scripts/format.sh`\n",
+    "\n",
+    "To go back to the version in the registry, use\n",
+    "```julia\n",
+    "pkg> free IonSim\n",
+    "```\n",
+    "\n",
+    "In order to update the IonSim.jl version that lives in the Julia general registry, change the version number in the Project.toml file, commit the changes and then add a comment to the commit that reads:\n",
+    "```\n",
+    "@JuliaRegistrator register\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Release Notes: See our release notes on [GitHub](https://github.com/HaeffnerLab/IonSim.jl/releases)."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.0",
+   "display_name": "Julia 1.6.7",
    "language": "julia",
-   "name": "julia-1.8"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
