--- a/webpage/tutorial-notebooks/getting_started.ipynb
+++ b/webpage/tutorial-notebooks/getting_started.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "Collapsed": "false"
@@ -719,7 +718,7 @@
     "Collapsed": "false"
    },
    "source": [
-    "`LinearChain` automatically computes the normal modes for a collection of ions (as input to keyword argument `ions`) in a linear Coloumb crystal with the given center of mass frequencies. By setting `selectedmodes=(;z=[1])` we've decided to only consider the 1st normal mode along the ẑ-direction."
+    "`LinearChain` automatically computes the normal modes for a collection of ions (as input to keyword argument `ions`) in a linear Coloumb crystal with the given center of mass frequencies. By setting `selectedmodes=(;z=[1])` we've decided to only consider the 1st normal mode along the ẑ-direction."
    ]
   },
   {
@@ -733,7 +732,7 @@
      "data": {
       "text/plain": [
        "1-element Vector{VibrationalMode}:\n",
-       " VibrationalMode(ν=1.0e6, axis=ẑ, N=10)"
+       " VibrationalMode(ν=1.0e6, axis=ẑ, N=10)"
       ]
      },
      "execution_count": 13,
@@ -759,7 +758,7 @@
     "\n",
     "````{margin}\n",
     "```{note}\n",
-    "ẑ is always assumed to be along the crystal's axis of symmetry.\n",
+    "ẑ is always assumed to be along the crystal's axis of symmetry.\n",
     "```\n",
     "````"
    ]
@@ -781,7 +780,7 @@
    },
    "outputs": [],
    "source": [
-    "chamber = Chamber(iontrap=chain, B=4e-4, Bhat=ẑ, δB=0, lasers=[laser]);"
+    "chamber = Chamber(iontrap=chain, B=4e-4, Bhat=ẑ, δB=0, lasers=[laser]);"
    ]
   },
   {
@@ -790,7 +789,7 @@
     "Collapsed": "false"
    },
    "source": [
-    "A `Chamber` specifically associates an `IonTrap` and a set of lasers. It keeps track of which lasers point at which ions and with how much scaled strength (to model e.g. crosstalk). It also keeps track of the magnetic field. In this case we've set the magnetic field to have a strength of 4 Gauss and to point in the ẑ-direction. δB can be used to model a time-dependent magnetic field, which for example, might be useful to model noise -- for now we set it to 0."
+    "A `Chamber` specifically associates an `IonTrap` and a set of lasers. It keeps track of which lasers point at which ions and with how much scaled strength (to model e.g. crosstalk). It also keeps track of the magnetic field. In this case we've set the magnetic field to have a strength of 4 Gauss and to point in the ẑ-direction. δB can be used to model a time-dependent magnetic field, which for example, might be useful to model noise -- for now we set it to 0."
    ]
   },
   {
@@ -837,7 +836,7 @@
      "data": {
       "text/plain": [
        "[⁴⁰Ca\n",
-       " ⊗ VibrationalMode(ν=1.0e6, axis=ẑ, N=10)]"
+       " ⊗ VibrationalMode(ν=1.0e6, axis=ẑ, N=10)]"
       ]
      },
      "execution_count": 16,
@@ -948,7 +947,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Due to selection rules and because we've defined our magnetic field to point in the ẑ-direction we need to update the geometry of our laser to have a nonzero coupling to this transition:"
+    "Due to selection rules and because we've defined our magnetic field to point in the ẑ-direction we need to update the geometry of our laser to have a nonzero coupling to this transition:"
    ]
   },
   {
@@ -959,8 +958,8 @@
    },
    "outputs": [],
    "source": [
-    "polarization!(laser, (x̂ - ẑ)/√2)\n",
-    "wavevector!(laser, (x̂ + ẑ)/√2);"
+    "polarization!(laser, (x̂ - ẑ)/√2)\n",
+    "wavevector!(laser, (x̂ + ẑ)/√2);"
    ]
   },
   {
@@ -1376,7 +1375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we need to construct and initial state of our system. As shown above, the basis is `⁴⁰Ca ⊗ VibrationalMode(ν=1.0e6, axis=ẑ, N=10)`, so we need to construct a state of this form.\n",
+    "Finally, we need to construct and initial state of our system. As shown above, the basis is `⁴⁰Ca ⊗ VibrationalMode(ν=1.0e6, axis=ẑ, N=10)`, so we need to construct a state of this form.\n",
     "\n",
     "For the `Ion`, an electronic eigenstate can be constructed either by indexing with the sublevel, or with the function `ionstate`."
    ]
@@ -1445,7 +1444,7 @@
      "output_type": "stream",
      "text": [
       "Ket(dim=11)\n",
-      "  basis: VibrationalMode(ν=1.0e6, axis=ẑ, N=10)\n",
+      "  basis: VibrationalMode(ν=1.0e6, axis=ẑ, N=10)\n",
       " 1.0 + 0.0im\n",
       " 0.0 + 0.0im\n",
       " 0.0 + 0.0im\n",
@@ -2735,7 +2734,7 @@
     "#         ions=[C], com_frequencies=(x=3e6,y=3e6,z=1e6), \n",
     "#         vibrational_modes=(;z=[1]))\n",
     "\n",
-    "# T = Trap(configuration=chain, B=4e-4, Bhat=ẑ, δB=0, lasers=[L]);\n",
+    "# T = Trap(configuration=chain, B=4e-4, Bhat=ẑ, δB=0, lasers=[L]);\n",
     "\n",
     "# # Redefine mode for new trap\n",
     "# mode = T.configuration.vibrational_modes.z[1];\n",
@@ -2856,7 +2855,7 @@
     "#         ions=[C], com_frequencies=(x=3e6,y=3e6,z=1e6), \n",
     "#         vibrational_modes=(;z=[1]))\n",
     "\n",
-    "# T = Trap(configuration=chain, B=4e-4, Bhat=ẑ, δB=0, lasers=[L]);\n",
+    "# T = Trap(configuration=chain, B=4e-4, Bhat=ẑ, δB=0, lasers=[L]);\n",
     "\n",
     "# mode = T.configuration.vibrational_modes.z[1];"
    ]
@@ -2894,7 +2893,7 @@
     "# end\n",
     "\n",
     "# # compute expected τ\n",
-    "# hz_per_E = 1 / Efield_from_rabi_frequency(1, ẑ, L, C, (\"S\", \"D\"))\n",
+    "# hz_per_E = 1 / Efield_from_rabi_frequency(1, ẑ, L, C, (\"S\", \"D\"))\n",
     "# τ_us = 1e6 / (2π * δE * hz_per_E)\n",
     "\n",
     "# plt.plot(tspan, ex)\n",
@@ -2957,7 +2956,7 @@
     "        comfrequencies=(x=3e6,y=3e6,z=1e6), \n",
     "        selectedmodes=(;z=[1])\n",
     "    )\n",
-    "chamber = Chamber(iontrap=chain, B=4e-4, Bhat=(x̂ + ẑ)/√2, lasers=[laser1, laser2]);"
+    "chamber = Chamber(iontrap=chain, B=4e-4, Bhat=(x̂ + ẑ)/√2, lasers=[laser1, laser2]);"
    ]
   },
   {
@@ -2977,12 +2976,12 @@
     "wavelength_from_transition!(laser1, ca, (\"S\", \"D\"), chamber)\n",
     "detuning!(laser1, ν + ϵ - d)\n",
     "polarization!(laser1, x̂)\n",
-    "wavevector!(laser1, ẑ)\n",
+    "wavevector!(laser1, ẑ)\n",
     "\n",
     "wavelength_from_transition!(laser2, ca, (\"S\", \"D\"), chamber)\n",
     "detuning!(laser2, -ν - ϵ + d)\n",
     "polarization!(laser2, x̂)\n",
-    "wavevector!(laser2, ẑ)\n",
+    "wavevector!(laser2, ẑ)\n",
     "\n",
     "modecutoff!(mode, 5)\n",
     "\n",
@@ -3269,7 +3268,7 @@
     "        comfrequencies=(x=3e6,y=3e6,z=1e6), \n",
     "        selectedmodes=(;z=[1])\n",
     "    )\n",
-    "chamber = Chamber(iontrap=chain, B=4e-4, Bhat=(x̂ + ẑ)/√2, lasers=[laser1, laser2])\n",
+    "chamber = Chamber(iontrap=chain, B=4e-4, Bhat=(x̂ + ẑ)/√2, lasers=[laser1, laser2])\n",
     "globalbeam!(laser1, chamber)  # set laser1 to shine equally on all ions\n",
     "globalbeam!(laser2, chamber)  # set laser2 to shine equally on all ions\n",
     "mode = zmodes(chamber)[1]\n",
@@ -3414,15 +3413,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.0",
+   "display_name": "Julia 1.6.7",
    "language": "julia",
-   "name": "julia-1.8"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.6.7"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
