moved logo files to logos folder and changed dir that was locating logo

--- a/webpage/tutorial-notebooks/Documentation.ipynb
+++ b/webpage/tutorial-notebooks/Documentation.ipynb
@@ -9,9 +9,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The documentation of IonSim.jl can be found at [https://docs.ionsim.org/](https://docs.ionsim.org/)"
+   ]
   }
  ],
  "metadata": {
