--- a/webpage/tutorial-notebooks/Installation.ipynb
+++ b/webpage/tutorial-notebooks/Installation.ipynb
@@ -12,6 +12,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Installing IonSim and packages"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "If you haven't done so already, download [Julia](https://julialang.org) (platform specific instructions can be found [here](https://julialang.org/downloads/)). Next, open the Julia app, which should launch a [REPL](https://docs.julialang.org/en/v1/stdlib/REPL/#The-Julia-REPL-1) session, and install IonSim using the following commands:"
    ]
   },
@@ -80,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extra Linux notes\n",
+    "## Extra Linux notes\n",
     "* Extract the downloaded file\n",
     "* copy to `/opt` with:\n",
     "\n",
@@ -182,7 +190,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.0"
+   "version": "1.6.7"
   }
  },
  "nbformat": 4,
