cleaned codes for examples and updated _toc.yml to the new design

--- a/webpage/tutorial-notebooks/about_us.ipynb
+++ b/webpage/tutorial-notebooks/about_us.ipynb
@@ -5,22 +5,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# About US"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "IonSim.jl was built while sheltering-in-place by bored graduate students in [Hartmut Haeffner's trapped ion lab](https://ions.berkeley.edu) at UC Berkeley."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# About US\n",
+    "\n",
+    "IonSim.jl was built while sheltering-in-place by bored graduate students in [Hartmut Haeffner's trapped ion lab](https://ions.berkeley.edu) at UC Berkeley.\n",
+    "\n",
     "## Contributors\n",
     "\n",
     "A partial list of contributors is below, in no particular order.\n",
@@ -30,14 +18,8 @@
     "+ Justin Phillips justin.phillips@berkeley.edu\n",
     "+ Kunal Marwaha kmarw@uchicago.edu\n",
     "+ Kristian Barajas kdbarajas@physics.ucla.edu\n",
-    "+ Anderson Park andersonjpark@berkeley.edu"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "+ Anderson Park andersonjpark@berkeley.edu\n",
+    "\n",
     "## Webpage\n",
     "\n",
     "This webpage was designed as part of the VetsInTech Web Dev course, hosted by Galvanize and sponsored by DraftKings. The work was done primarily by Joseph Broz, with plenty of help from the Galvanize instructors Brett Cunningham and Daniel Kim.\n",
@@ -46,11 +28,6 @@
     "This webpage is built dynamically using [Jupyter Book](https://jupyterbook.org/). At build time, notebooks are executed remotely on a GitHub server. Julia's `@time` macro is used in various places to give an idea of the runtime for snippets of code. However, because of our lack of control over the execution environment, these values should be taken with a grain of salt. For example, solving for the evolution corresponding to the [VAET Hamiltonian](vaet-simulation-solve) runs as much as six times slower as compared to a standard MacBook Pro.\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
